<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="task"
            type="org.wangchenlong.mvpdatabindingdemo.data.Task"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/task_add_et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint"
                android:singleLine="true"
                android:text="@{task.title}"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <EditText
                android:id="@+id/task_add_et_description"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:gravity="top"
                android:hint="@string/description_hint"
                android:text="@{task.description}"/>

        </LinearLayout>

    </ScrollView>
</layout>