<?xml version="1.0" encoding="utf-8"?>
<!--抽屉布局-->
<android.support.v4.widget.DrawerLayout
    android:id="@+id/main_dl_drawer_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wangchenlong.mvpdatabindingdemo.MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/main_tl_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/Toolbar"/>
        </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/main_cl_coordinator_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Fragment的替换布局-->
            <FrameLayout
                android:id="@+id/main_fl_content_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <!--Fab绑定Fragment布局之上-->
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/main_fab_add_task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add"
                app:fabSize="normal"
                app:layout_anchor="@id/main_fl_content_frame"
                app:layout_anchorGravity="bottom|right|end"/>

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>

    <!--导航视图, 添加Header和Menu-->
    <android.support.design.widget.NavigationView
        android:id="@+id/main_nv_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_actions"/>

</android.support.v4.widget.DrawerLayout>
