...
            android:layout_height="match_parent"
            android:text="@{statistics.status}"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="@{statistics.showStatus ? View.VISIBLE : View.GONE}"/>

        <LinearLayout
            android:id="@+id/statistic_ll_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="@{statistics.showStatus ? View.GONE : View.VISIBLE}">

            <TextView
...
